exports[`BpkChartAxis X should render band scale 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(16.666666666666668, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      North America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(50, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      South America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(83.33333333333334, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Europe
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(116.66666666666667, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Asia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(150, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Australia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(183.33333333333334, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(50, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      South America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(116.66666666666667, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Asia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(183.33333333333334, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(16.666666666666668, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      North America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(83.33333333333334, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Europe
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(150, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      Australia
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render linear scale 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(18.947368421052634, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      50
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(40, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      100
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(61.05263157894737, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      150
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(103.15789473684211, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      250
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(124.21052631578948, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      300
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(145.26315789473685, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      350
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      400
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(187.3684210526316, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      450
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      400
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis X should render with label 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--x"
  textAnchor="middle"
  transform="translate(0, 120)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(18.947368421052634, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      50
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(40, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      100
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(61.05263157894737, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      150
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(82.10526315789474, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(103.15789473684211, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      250
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(124.21052631578948, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      300
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(145.26315789473685, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      350
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(166.31578947368422, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      400
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(187.3684210526316, 0)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="hanging"
      dy={0}
      x={0}
      y={6}>
      450
    </text>
  </g>
  <text
    className="bpk-barchart__axis-label bpk-barchart__axis-label--x"
    dominantBaseline="text-before-edge"
    textAnchor="middle"
    x={60}
    y={40}>
    X axis label
  </text>
</g>
`;

exports[`BpkChartAxis Y should render band scale 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 16.666666666666668)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      North America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 50)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      South America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 83.33333333333334)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Europe
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 116.66666666666667)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Asia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 150)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Australia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 183.33333333333334)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 50)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      South America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 116.66666666666667)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Asia
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 183.33333333333334)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Antartica
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 16.666666666666668)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      North America
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 83.33333333333334)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Europe
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 150)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      Australia
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render linear scale 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 18.947368421052634)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      50
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 40)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      100
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 61.05263157894737)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      150
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 103.15789473684211)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      250
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 124.21052631578948)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      300
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 145.26315789473685)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      350
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 187.3684210526316)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      450
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
</g>
`;

exports[`BpkChartAxis Y should render with label 1`] = `
<g
  className="bpk-barchart__axis bpk-barchart__axis--y"
  textAnchor="end"
  transform="translate(0, 0)">
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 18.947368421052634)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      50
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 40)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      100
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 61.05263157894737)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      150
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 82.10526315789474)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      200
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 103.15789473684211)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      250
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 124.21052631578948)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      300
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 145.26315789473685)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      350
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 166.31578947368422)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      400
    </text>
  </g>
  <g
    className="bpk-barchart__axis-tick--group"
    transform="translate(0, 187.3684210526316)">
    <text
      className="bpk-barchart__axis-tick--text"
      dominantBaseline="auto"
      dy="0.32em"
      x={-6}
      y={0}>
      450
    </text>
  </g>
  <text
    className="bpk-barchart__axis-label bpk-barchart__axis-label--y"
    dominantBaseline="hanging"
    textAnchor="middle"
    transform="translate(-40, 60) rotate(-90)">
    Y axis label
  </text>
</g>
`;
